[gd_scene load_steps=29 format=3 uid="uid://c1j8acm6ymuju"]

[ext_resource type="Shader" path="res://Entities/Enemies/hit_flash.gdshader" id="1_gk0nd"]
[ext_resource type="Texture2D" uid="uid://ds1rqwa2cldf1" path="res://Entities/Enemies/PolarBear/polar_bear_death2.png" id="1_qq04s"]
[ext_resource type="Script" path="res://Entities/Enemies/PolarBear/polar_bear.gd" id="1_w8qpw"]
[ext_resource type="Texture2D" uid="uid://c2akt0wppjqup" path="res://Assets/Entities/Enemies/Polar Bear Guard/idle pb.png" id="3_bigm2"]
[ext_resource type="Theme" uid="uid://dap64i2o0ns0x" path="res://Misc/Theme.tres" id="4_p6t7c"]
[ext_resource type="Texture2D" uid="uid://xm4iu353nad3" path="res://Assets/Entities/Enemies/Polar Bear Guard/pb slap.png" id="5_s5vqn"]
[ext_resource type="Texture2D" uid="uid://27mwfe38jco2" path="res://Assets/Entities/Enemies/Polar Bear Guard/pb walking.png" id="6_i65li"]
[ext_resource type="AudioStream" uid="uid://dfsp13wh0lwrc" path="res://Audio/polarSlap.mp3" id="7_l2txk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ne1sd"]
resource_local_to_scene = true
shader = ExtResource("1_gk0nd")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_ai8j1"]
atlas = ExtResource("3_bigm2")
region = Rect2(0, 0, 38, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikhoc"]
atlas = ExtResource("1_qq04s")
region = Rect2(56, 0, 56, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qqeb"]
atlas = ExtResource("1_qq04s")
region = Rect2(112, 0, 56, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_bbafe"]
atlas = ExtResource("1_qq04s")
region = Rect2(168, 0, 56, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtq7a"]
atlas = ExtResource("3_bigm2")
region = Rect2(0, 0, 38, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvkx1"]
atlas = ExtResource("3_bigm2")
region = Rect2(38, 0, 38, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4g7v"]
atlas = ExtResource("5_s5vqn")
region = Rect2(0, 0, 55, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4j7y"]
atlas = ExtResource("5_s5vqn")
region = Rect2(55, 0, 55, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k76bt"]
atlas = ExtResource("5_s5vqn")
region = Rect2(110, 0, 55, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3233"]
atlas = ExtResource("5_s5vqn")
region = Rect2(165, 0, 55, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n58vg"]
atlas = ExtResource("6_i65li")
region = Rect2(0, 0, 38, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_on8ob"]
atlas = ExtResource("6_i65li")
region = Rect2(38, 0, 38, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5sr4"]
atlas = ExtResource("6_i65li")
region = Rect2(76, 0, 38, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_0v3sn"]
atlas = ExtResource("6_i65li")
region = Rect2(114, 0, 38, 31)

[sub_resource type="SpriteFrames" id="SpriteFrames_1btrm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ai8j1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikhoc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qqeb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bbafe")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wtq7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvkx1")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4g7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4j7y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k76bt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3233")
}],
"loop": false,
"name": &"slap",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n58vg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_on8ob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5sr4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0v3sn")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_jewoi"]
radius = 144.003

[sub_resource type="CircleShape2D" id="CircleShape2D_cpfbp"]
radius = 17.0294

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lbeyq"]
size = Vector2(33, 22)

[sub_resource type="CircleShape2D" id="CircleShape2D_1550s"]
radius = 29.0172

[node name="polar-bear-slap" type="CharacterBody2D"]
platform_floor_layers = 4294967294
script = ExtResource("1_w8qpw")

[node name="RegenTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_ne1sd")
position = Vector2(5, -2)
scale = Vector2(1.14286, 1.1)
sprite_frames = SubResource("SpriteFrames_1btrm")
animation = &"death"

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -10.0
offset_top = -23.0
offset_right = 95.0
offset_bottom = 4.0
scale = Vector2(0.2, 0.2)
theme = ExtResource("4_p6t7c")
max_value = 250.0
show_percentage = false

[node name="detection_radius" type="Area2D" parent="."]

[node name="detection_shape" type="CollisionShape2D" parent="detection_radius"]
shape = SubResource("CircleShape2D_jewoi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_cpfbp")

[node name="hitbox" type="Area2D" parent="."]

[node name="hitbox_shape" type="CollisionShape2D" parent="hitbox"]
position = Vector2(2.5, 2)
shape = SubResource("RectangleShape2D_lbeyq")

[node name="Reload_Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="slap_radius" type="Area2D" parent="."]

[node name="slap_shape" type="CollisionShape2D" parent="slap_radius"]
position = Vector2(2, 1)
shape = SubResource("CircleShape2D_1550s")

[node name="slap_timer" type="Timer" parent="."]

[node name="FlashHitTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="polarSlap" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_l2txk")

[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="body_entered" from="detection_radius" to="." method="_on_detection_radius_body_entered"]
[connection signal="body_entered" from="slap_radius" to="." method="_on_slap_radius_body_entered"]
[connection signal="body_exited" from="slap_radius" to="." method="_on_slap_radius_body_exited"]
[connection signal="timeout" from="slap_timer" to="." method="_on_slap_timer_timeout"]
[connection signal="timeout" from="FlashHitTimer" to="." method="_on_FlashTimer_timeout"]
